# rinzler

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/rinzler/: __init__.py  __main__.py  actor.py  commands.py
src/rinzler/etc/: rinzler.yml  schema.json
